css/style.css
/* ... */
.info li .first-block {
  width: 40%;
  display: inline-block;
  float: left;
  color: #000;
  font-weight: bold;
}
.info li .second-block {
  width: 60%;
  display: inline-block;
  color: rgba(0, 0, 0, 0.5);
}

.fh5co-social-icons {
  margin: 0;
  padding: 0;
}
.fh5co-social-icons li {
  margin: 0;
  padding: 0;
  list-style: none;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
}
.fh5co-social-icons li a {
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  color: #45b5ff;
  padding-left: 10px;
  padding-right: 10px;
}
.fh5co-social-icons li a i {
  font-size: 20px;
}

#fh5co-about .fh5co-social-icons {
  margin: 0;
  padding: 0;
}
#fh5co-about .fh5co-social-icons li {
  padding: 0;
  list-style: none;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
}
#fh5co-about .fh5co-social-icons li a {
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  color: #fff;
  background: #2F3C4F;
  padding: 10px 10px 2px 10px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  border-radius: 2px;
}
#fh5co-about .fh5co-social-icons li a i {
  font-size: 20px;
}
#fh5co-about .fh5co-social-icons li a:hover {
  background: #45b5ff;
}

.info {
  margin: 0;
  padding: 0;
  width: 90%;
  float: left;
}
@media screen and (max-width: 768px) {
  .info {
    margin-bottom: 3em;
  }
}
.info li {
  width: 100%;
  float: left;
  list-style: none;
  padding: 10px 0;
}
.info li:first-child {
  padding-top: 0;
}
.info li .first-block {
  width: 40%;
  display: inline-block;
  float: left;
  color: #000;
  font-weight: bold;
}
.info li .second-block {
  width: 60%;
  display: inline-block;
  color: rgba(0, 0, 0, 0.5);
}

.chart {
  width: 160px;
  height: 160px;
  margin: 0 auto 40px auto;
  position: relative;
  text-align: center;
}
.chart span {
  position: absolute;
  top: 50%;
  left: 0;
  margin-top: -30px;
  width: 100%;
}
.chart span strong {
  display: block;
}
.chart canvas {
  position: absolute;
  left: 0;
  top: 0;
}

.progress-wrap {
  width: 100%;
  float: left;
  margin-bottom: 10px;
}
.progress-wrap h3 {
  font-size: 16px;
  display: block;
  margin-bottom: 10px;
  float: left;
  width: 100%;
}
.progress-wrap h3 .name-left {
  float: left;
}
.progress-wrap h3 .value-right {
  float: right;
}

.progress {
  width: 100%;
  float: left;
  height: 5px;
  box-shadow: none;
}

.progress-bar {
  background-color: #2F3C4F;
  height: 5px;
  display: block;
  box-shadow: none;
}
.progress-bar.progress-bar-1 {
  background-color: #2980b9 !important;
}
.progress-bar.progress-bar-2 {
  background-color: #c0392b !important;
}
.progress-bar.progress-bar-3 {
  background-color: #d35400 !important;
}
.progress-bar.progress-bar-4 {
  background-color: #8e44ad !important;
}
.progress-bar.progress-bar-5 {
  background-color: #27ae60 !important;
}


.gototop {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 999;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
.gototop.active {
  opacity: 1;
  visibility: visible;
}
.gototop a {
  width: 50px;
  height: 50px;
  display: table;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  text-align: center;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}
.gototop a i {
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}
.gototop a:hover, .gototop a:active, .gototop a:focus {
  text-decoration: none;
  outline: none;
}




.search-container {
  float: right;
}

.navbar input[type=text] {
  padding: 6px;
  margin-top: 8px;
  font-size: 17px;
  border: none;
}

.navbar .search-container button {
  float: right;
  padding: 6px 10px;
  margin-top: 8px;
  margin-right: 16px;
  background: #ddd;
  font-size: 17px;
  border: none;
  cursor: pointer;
}

.navbar .search-container button:hover {
  background: #ccc;
}

@media screen and (max-width: 600px) {
  .navbar .search-container {
    float: none;
  }
  .navbar a, .navbar input[type=text], .navbar .search-container button {
    float: none;
    display: block;
    text-align: left;
    width: 100%;
    margin: 0;
    padding: 14px;
  }
  .navbar input[type=text] {
    border: 1px solid #ccc;
  }
}

.button {
  background-color: transparent; /* Green */
  border: none;
  color: #666666;
  padding: 15px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.button:hover {
  background-color: #777777; /* Green */
  border: none;
  color: #ffffff;
  padding: 15px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

.fh5co-bg-dark {
  background: #222222;
}
.fh5co-bg-dark .fh5co-heading h2 {
  color: #fff !important;
}

